Added final icon images, fixed spacing

--- a/index.html
+++ b/index.html
@@ -39,34 +39,34 @@
                         <header class="major">
                             <h2><img class="inline logo" src="images/NEXT_black_nobg_inline.png"/> Robotics Competition</h2>
                         </header>
-                        <ul class="icons-column">
-                        	<li>
-	                            <div class="img-on-left">
-	                                <img src="images/oldyoung.jpg"/>
-	                                <div>
-	                                    <h3>No Age/School Restrictions</h3>
-	                                    <p>Compete even as a college student or post-academic!</p>
-	                                </div>
-	                            </div>
-	                        </li>
-	                        <li>
-	                            <div class="img-on-right">
-	                                <img src="images/calendar.png"/>
-	                                <div>
-	                                    <h3>August Kickoff | November Competition</h3>
-	                                    <p>Most educational robotics programs have their build season in the spring.  NEXT Robotics Competition features a fall build season to avoid overlap and allow competitors to continue as mentors in the spring.</p>
-	                                </div>
-	                            </div>
-	                        </li>
-	                        <li>
-	                            <div class="img-on-left">
-	                                <img src="images/midwest.png"/>
-	                                <div>
-	                                    <h3>Midwest Venue</h3>
-	                                    <p>Initially, NEXT Robotics Competition will have just one event in the Midwest.  In the future, NEXT will look to expand to new locations based on interest.</p>
-	                                </div>
-	                            </div>
-	                        </li>
+                        <ul class="column">
+                            <li>
+                                <div class="img-on-left">
+                                    <img src="images/all-ages.png"/>
+                                    <div>
+                                        <h3>No Age/School Restrictions</h3>
+                                        <p>Compete even as a college student or post-academic!</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="img-on-right">
+                                    <img src="images/fall.png"/>
+                                    <div>
+                                        <h3>August Kickoff | November Competition</h3>
+                                        <p>Most educational robotics programs have their build season in the spring.  NEXT Robotics Competition features a fall build season to avoid overlap and allow competitors to continue as mentors in the spring.</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="img-on-left">
+                                    <img src="images/midwest.png"/>
+                                    <div>
+                                        <h3>Midwest Venue</h3>
+                                        <p>Initially, NEXT Robotics Competition will have just one event in the Midwest.  In the future, NEXT will look to expand to new locations based on interest.</p>
+                                    </div>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                     <a href="#the_game" class="goto-next scrolly">Next</a>
@@ -81,7 +81,7 @@
                         <header class="major">
                             <h2>The Game</h2>
                         </header>
-                        <ul class="icons-grid">
+                        <ul class="grid">
                             <li>
                                 <div class="column-layout">
                                     <img class="the-game-icon" src="images/weight.png"/>
@@ -93,7 +93,7 @@
                             </li>
                             <li>
                                 <div class="column-layout">
-                                    <img class="the-game-icon" src="images/cpu.png"/>
+                                    <img class="the-game-icon" src="images/chips.png"/>
                                     <div class="the-game-text">
                                         <h3>Custom Electronics</h3>
                                         <p>Teams can use any communcications and controls platform they want, and even some high-power brushless motors will be allowed*.</p>
@@ -102,7 +102,7 @@
                             </li>
                             <li>
                                 <div class="column-layout">
-                                    <img class="the-game-icon" src="images/money.png"/>
+                                    <img class="the-game-icon" src="images/low-cost.png"/>
                                     <div class="the-game-text">
                                         <h3>Low Cost</h3>
                                         <p>By design, teams could compete with a budget as little as $500, which will be demonstrated by the sample chassis design. The majority of components are also reusable.</p>
@@ -111,7 +111,7 @@
                             </li>
                             <li>
                                 <div class="column-layout">
-                                    <img class="the-game-icon" src="images/robot2.jpg"/>
+                                    <img class="the-game-icon" src="images/alliances.png    "/>
                                     <div class="the-game-text">
                                         <h3>Alliances</h3>
                                         <p>Learning from the success of other educational robotics programs, NEXT Robotics Competition will feature alliances of robots working together to accomplish the game challenge.</p>
@@ -132,22 +132,32 @@
                         <header class="major">
                             <h2>Why <img class="inline logo" src="images/NEXT_black_nobg_inline.png"/>?</h2>
                         </header>
-                        <div>
-                            <h3 class="align-left">"We are what we celebrate" - Dean Kamen</h3>
-                            <p class="align-left">Keep celebrating!  NEXT Robotics Competition adds a "pro" level beyond educational robotics programs, giving students visible role-model competitors to aspire to.</p>
-                        </div>
-                        <div>
-                            <h3 class="align-left">Build a World of Creators</h3>
-                            <p class="align-left">With the rapid emergence of automation, our world is desperately in need of a cultural shift towards creativity.  NEXT Robotics Competition is a sport that enables people to practice their creative skills, which will lead to a productive, sustainable society.</p>
-                        </div>
-                        <div>
-                            <h3 class="align-left">Hone Teamwork and Communication Skills</h3>
-                            <p class="align-left">Sports are commonly regarded as a valuable activity to build teamwork and communication skills.  NEXT Robotics Competition is a sport and provides the same benefits to those with interests outside of traditional sports.</p>
-                        </div>
-                        <div>
-                            <h3 class="align-left">Adults Like to Compete, Too!</h3>
-                            <p class="align-left">NEXT Robotics Competition provides an outlet for adult designers to put their own skills to the test outside of the educational robotics spectrum of K-12 robotics programs.  And because of the timing of the build seasons, NEXT competitors can still be adult mentors in many educational robotics programs.</p>
-                        </div>
+                        <ul class="column">
+                            <li>
+                                <div class="why-next-text">
+                                    <h3 class="align-left">"We are what we celebrate" - Dean Kamen</h3>
+                                    <p class="align-left">Keep celebrating!  NEXT Robotics Competition adds a "pro" level beyond educational robotics programs, giving students visible role-model competitors to aspire to.</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="why-next-text">
+                                    <h3 class="align-left">Build a World of Creators</h3>
+                                    <p class="align-left">With the rapid emergence of automation, our world is desperately in need of a cultural shift towards creativity.  NEXT Robotics Competition is a sport that enables people to practice their creative skills, which will lead to a productive, sustainable society.</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="why-next-text">
+                                    <h3 class="align-left">Hone Teamwork and Communication Skills</h3>
+                                    <p class="align-left">Sports are commonly regarded as a valuable activity to build teamwork and communication skills.  NEXT Robotics Competition is a sport and provides the same benefits to those with interests outside of traditional sports.</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="why-next-text">
+                                    <h3 class="align-left">Adults Like to Compete, Too!</h3>
+                                    <p class="align-left">NEXT Robotics Competition provides an outlet for adult designers to put their own skills to the test outside of the educational robotics spectrum of K-12 robotics programs.  And because of the timing of the build seasons, NEXT competitors can still be adult mentors in many educational robotics programs.</p>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
                     <a href="#footer" class="goto-next scrolly">Next</a>
                 </div>
@@ -156,19 +166,16 @@
         <!-- Footer -->
             <section id="footer">
                 <div class="container">
-                    <header class="major">
-                        <h2>Registration will open later this summer.</h2>
-                        <h2>Interested? Sign up to receive updates!</h2>
-                        <p>You may unsubscribe at any time</p>
-                    </header>
+                    <h2 class="space-below">Registration will open later this summer.</h2>
+                    <h2>Interested? Sign up to receive updates!</h2>
+                    <p>You may unsubscribe at any time</p>
                     <form method="post" action="#">
                         <div class="row uniform">
                             <div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
                             <div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
-                            <div class="12u$"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
                             <div class="12u$">
                                 <ul class="actions">
-                                    <li><input type="submit" value="Send Message" class="special" /></li>
+                                    <li><input type="submit" value="Sign Up" class="special" /></li>
                                 </ul>
                             </div>
                         </div>
