Made various NEXT logos.

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
                     <ul class="actions">
                         <li>
                             <a href="#next_overview" class="button special scrolly flex">
-                                <div class="space-right">What's</div>
-                                <img class="inline logo" src="images/NEXT_white_nobg_inline.png"/>
-                                <div>?</div>
+                                <img id="whats-next" src="images/whats-next.png"/>
                             </a>
                         </li>
                     </ul>
@@ -37,7 +35,7 @@
                     <img class="bg" src="images/pits1.jpg"/>
                     <div class="content">
                         <header class="major">
-                            <h2><img class="inline logo" src="images/NEXT_black_nobg_inline.png"/> Robotics Competition</h2>
+                            <h2><img id="next-title" src="images/next-robotics-competition-wide.png"/></h2>
                         </header>
                         <ul class="column">
                             <li>
@@ -130,7 +128,7 @@
                     <img class="bg" src="images/championship2.jpg"/>
                     <div class="content">
                         <header class="major">
-                            <h2>Why <img class="inline logo" src="images/NEXT_black_nobg_inline.png"/>?</h2>
+                            <h2><img id="why-next" src="images/why-next.png"/></h2>
                         </header>
                         <ul class="column">
                             <li>
