Added rotating title and title box.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
         <!-- Header -->
             <section id="header">
-                <header class="major">
-                    <h1>Be a Creator</h1>
+                <header>
+                    <div id="title-box">
+                        <h1 id="main-title">Be a<span class="rotate"> Creator, Designer,n Innovator</span></h1>
+                    </div>
                 </header>
                 <div class="container">
                     <img class="bg" src="images/championship1.jpg"/>
