Moved 'Low Cost' section from 'The Game' section to 'NEXT Overview' section

--- a/index.html
+++ b/index.html
@@ -39,31 +39,40 @@
                         <header class="major">
                             <h2><img id="next-title" src="images/next-robotics-competition-wide.png"/></h2>
                         </header>
-                        <ul class="column">
+                        <ul class="grid">
                             <li>
-                                <div class="img-on-left">
-                                    <img src="images/all-ages.png"/>
+                                <div class="column-layout">
+                                    <img class="grid-icon" src="images/all-ages.png"/>
                                     <div>
                                         <h3>No Age/School Restrictions</h3>
-                                        <p>Compete even as a college student or post-academic!</p>
+                                        <p>Compete even as a high school or college student, or as a professional or hobbyist!</p>
                                     </div>
                                 </div>
                             </li>
                             <li>
-                                <div class="img-on-right">
-                                    <img src="images/fall.png"/>
+                                <div class="column-layout">
+                                    <img class="grid-icon" src="images/fall.png"/>
                                     <div>
-                                        <h3>August Kickoff | November Competition</h3>
-                                        <p>Most educational robotics programs have their build season in the spring.  NEXT Robotics Competition features a fall build season to avoid overlap and allow competitors to continue as mentors in the spring.</p>
+                                        <h3>August -> November</h3>
+                                        <p>NEXT features a fall build season to allow competitors to volunteer in the spring for educational robotics programs.</p>
                                     </div>
                                 </div>
                             </li>
                             <li>
-                                <div class="img-on-left">
-                                    <img src="images/midwest.png"/>
+                                <div class="column-layout">
+                                    <img class="grid-icon" src="images/midwest.png"/>
                                     <div>
                                         <h3>Midwest Venue</h3>
-                                        <p>Initially, NEXT Robotics Competition will have just one event in the Midwest.  In the future, NEXT will look to expand to new locations based on interest.</p>
+                                        <p>NEXT Robotics Competition will start in the Midwest. NEXT will look to expand to new locations based on interest.</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="column-layout">
+                                    <img class="grid-icon" src="images/low-cost.png"/>
+                                    <div class="the-game-text">
+                                        <h3>Low Cost</h3>
+                                        <p>Teams could compete with a budget as little as $500. The majority of components are also reusable.</p>
                                     </div>
                                 </div>
                             </li>
@@ -80,10 +89,10 @@
                         <header class="major">
                             <h2>The Game</h2>
                         </header>
-                        <ul class="grid">
+                        <ul class="column">
                             <li>
-                                <div class="column-layout">
-                                    <img class="the-game-icon" src="images/weight.png"/>
+                                <div class="img-on-left">
+                                    <img src="images/weight.png"/>
                                     <div class="the-game-text">
                                         <h3>60-lb Robots</h3>
                                         <p>The weight limit was chosen with cost in mind.  A sample chassis design will be made available to demonstrate low cost and technical barrier-to-entry.</p>
@@ -91,8 +100,8 @@
                                 </div>
                             </li>
                             <li>
-                                <div class="column-layout">
-                                    <img class="the-game-icon" src="images/chips.png"/>
+                                <div class="img-on-right">
+                                    <img src="images/chips.png"/>
                                     <div class="the-game-text">
                                         <h3>Custom Electronics</h3>
                                         <p>Teams can use any communcications and controls platform they want, and even some high-power brushless motors will be allowed*.</p>
@@ -100,17 +109,8 @@
                                 </div>
                             </li>
                             <li>
-                                <div class="column-layout">
-                                    <img class="the-game-icon" src="images/low-cost.png"/>
-                                    <div class="the-game-text">
-                                        <h3>Low Cost</h3>
-                                        <p>By design, teams could compete with a budget as little as $500, which will be demonstrated by the sample chassis design. The majority of components are also reusable.</p>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="column-layout">
-                                    <img class="the-game-icon" src="images/alliances.png    "/>
+                                <div class="img-on-left">
+                                    <img src="images/alliances.png    "/>
                                     <div class="the-game-text">
                                         <h3>Alliances</h3>
                                         <p>Learning from the success of other educational robotics programs, NEXT Robotics Competition will feature alliances of robots working together to accomplish the game challenge.</p>
