Fixed bug in the sizing of grid items

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <li>
                                 <div class="column-layout">
                                     <img class="grid-icon" src="images/all-ages.png"/>
-                                    <div>
+                                    <div class="grid-text">
                                         <h3>No Age/School Restrictions</h3>
                                         <p>Compete even as a high school or college student, or as a professional or hobbyist!</p>
                                     </div>
@@ -52,7 +52,7 @@
                             <li>
                                 <div class="column-layout">
                                     <img class="grid-icon" src="images/fall.png"/>
-                                    <div>
+                                    <div class="grid-text">
                                         <h3>August -> November</h3>
                                         <p>NEXT features a fall build season to allow competitors to volunteer in the spring for educational robotics programs.</p>
                                     </div>
@@ -61,7 +61,7 @@
                             <li>
                                 <div class="column-layout">
                                     <img class="grid-icon" src="images/midwest.png"/>
-                                    <div>
+                                    <div class="grid-text">
                                         <h3>Midwest Venue</h3>
                                         <p>NEXT Robotics Competition will start in the Midwest. NEXT will look to expand to new locations based on interest.</p>
                                     </div>
@@ -70,7 +70,7 @@
                             <li>
                                 <div class="column-layout">
                                     <img class="grid-icon" src="images/low-cost.png"/>
-                                    <div class="the-game-text">
+                                    <div class="grid-text">
                                         <h3>Low Cost</h3>
                                         <p>Teams could compete with a budget as little as $500. The majority of components are also reusable.</p>
                                     </div>
@@ -93,7 +93,7 @@
                             <li>
                                 <div class="img-on-left">
                                     <img src="images/weight.png"/>
-                                    <div class="the-game-text">
+                                    <div>
                                         <h3>60-lb Robots</h3>
                                         <p>The weight limit was chosen with cost in mind.  A sample chassis design will be made available to demonstrate low cost and technical barrier-to-entry.</p>
                                     </div>
@@ -102,7 +102,7 @@
                             <li>
                                 <div class="img-on-right">
                                     <img src="images/chips.png"/>
-                                    <div class="the-game-text">
+                                    <div>
                                         <h3>Custom Electronics</h3>
                                         <p>Teams can use any communcications and controls platform they want, and even some high-power brushless motors will be allowed*.</p>
                                     </div>
@@ -110,8 +110,8 @@
                             </li>
                             <li>
                                 <div class="img-on-left">
-                                    <img src="images/alliances.png    "/>
-                                    <div class="the-game-text">
+                                    <img src="images/alliances.png"/>
+                                    <div>
                                         <h3>Alliances</h3>
                                         <p>Learning from the success of other educational robotics programs, NEXT Robotics Competition will feature alliances of robots working together to accomplish the game challenge.</p>
                                     </div>
