Reworded 'Why NEXT?' section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                     <img class="grid-icon" src="images/midwest.png"/>
                                     <div class="grid-text">
                                         <h3>Midwest Venue</h3>
-                                        <p>NEXT Robotics Competition will start in the Midwest. NEXT will look to expand to new locations based on interest.</p>
+                                        <p>NEXT will start in the Midwest and look to expand to new locations based on interest.</p>
                                     </div>
                                 </div>
                             </li>
@@ -95,7 +95,7 @@
                                     <img src="images/weight.png"/>
                                     <div>
                                         <h3>60-lb Robots</h3>
-                                        <p>The weight limit was chosen with cost in mind.  A sample chassis design will be made available to demonstrate low cost and technical barrier-to-entry.</p>
+                                        <p>The weight limit was chosen with cost in mind.  A sample chassis design will be made available to demonstrate low cost and reduce technical barrier-to-entry.</p>
                                     </div>
                                 </div>
                             </li>
@@ -113,7 +113,7 @@
                                     <img src="images/alliances.png"/>
                                     <div>
                                         <h3>Alliances</h3>
-                                        <p>Learning from the success of other educational robotics programs, NEXT Robotics Competition will feature alliances of robots working together to accomplish the game challenge.</p>
+                                        <p>Similar to other educational robotics programs, NEXT Robotics Competition will feature alliances of robots working together to accomplish the game challenge.</p>
                                     </div>
                                 </div>
                             </li>
@@ -133,26 +133,26 @@
                         <ul class="column">
                             <li>
                                 <div class="why-next-text">
-                                    <h3 class="align-left">"We are what we celebrate" - Dean Kamen</h3>
-                                    <p class="align-left">Keep celebrating!  NEXT Robotics Competition adds a "pro" level beyond educational robotics programs, giving students visible role-model competitors to aspire to.</p>
+                                    <h3 class="align-left">Inspire the Future</h3>
+                                    <p class="align-left">Many people, especially our youth, look up to professional athletes.  NEXT Robotics Competition adds a "pro" level beyond educational robotics programs, giving students visible role-model competitors to aspire to.</p>
                                 </div>
                             </li>
                             <li>
                                 <div class="why-next-text">
                                     <h3 class="align-left">Build a World of Creators</h3>
-                                    <p class="align-left">With the rapid emergence of automation, our world is desperately in need of a cultural shift towards creativity.  NEXT Robotics Competition is a sport that enables people to practice their creative skills, which will lead to a productive, sustainable society.</p>
+                                    <p class="align-left">With the rapid emergence of automation replacing many traditional jobs, it is fundamental that we transition our work force into new creative roles.  NEXT Robotics Competition is a sport that enables people to practice their creativity, which will help us build a sustainable society.</p>
                                 </div>
                             </li>
                             <li>
                                 <div class="why-next-text">
                                     <h3 class="align-left">Hone Teamwork and Communication Skills</h3>
-                                    <p class="align-left">Sports are commonly regarded as a valuable activity to build teamwork and communication skills.  NEXT Robotics Competition is a sport and provides the same benefits to those with interests outside of traditional sports.</p>
+                                    <p class="align-left">Sports are commonly regarded as a valuable activity to build teamwork and communication skills.  NEXT Robotics Competition is a sport and provides the same benefits to those with talents and interests outside of traditional sports.</p>
                                 </div>
                             </li>
                             <li>
                                 <div class="why-next-text">
                                     <h3 class="align-left">Adults Like to Compete, Too!</h3>
-                                    <p class="align-left">NEXT Robotics Competition provides an outlet for adult designers to put their own skills to the test outside of the educational robotics spectrum of K-12 robotics programs.  And because of the timing of the build seasons, NEXT competitors can still be adult mentors in many educational robotics programs.</p>
+                                    <p class="align-left">NEXT Robotics Competition provides an outlet for adult designers to put their own skills to the test outside of the spectrum of K-12 educational robotics programs.  And because of the timing of the build seasons, NEXT competitors can still be adult mentors in many of these educational programs.</p>
                                 </div>
                             </li>
                         </ul>
