Added mission statement section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
                 </div>
             </section>
 
+        <!-- NEXT Mission -->
+            <section id="next_mission" class="main special">
+                <div class="container">
+                    <img class="bg" src=""/>
+                    <div class="content">
+                        <header class="major">
+                            <h2><img id="next-title" src="images/next-robotics-competition-wide.png"/></h2>
+                        </header>
+                        <p>NEXT Robotics Competition is an open robotics competition targeted at adults interested in learning and testing their skills in creativity, design, and innovation.</p>
+                        <p>NEXT Robotics Competition aims to inspire a cultural shift towards creativity and critical thinking by harnessing the world's competitive energy in sport.</p>
+                    </div>
+                </div>
+            </section>
+
         <!-- NEXT Overview -->
             <section id="next_overview" class="main special">
                 <div class="container">
