Rename the NEXT overview section to 'The Competition'

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <img class="bg" src="images/championship1.jpg"/>
                     <ul class="actions">
                         <li>
-                            <a href="#next_overview" class="button special scrolly flex">
+                            <a href="#next_mission" class="button special scrolly flex">
                                 <img id="whats-next" src="images/whats-next.png"/>
                             </a>
                         </li>
@@ -46,12 +46,12 @@
             </section>
 
         <!-- NEXT Overview -->
-            <section id="next_overview" class="main special">
+            <section id="the_competition" class="main special">
                 <div class="container">
                     <img class="bg" src="images/pits1.jpg"/>
                     <div class="content">
                         <header class="major">
-                            <h2><img id="next-title" src="images/next-robotics-competition-wide.png"/></h2>
+                            <h2>The Competition</h2>
                         </header>
                         <ul class="grid">
                             <li>
