--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 <div class="column-layout">
                                     <img class="grid-icon" src="images/all-ages.png"/>
                                     <div class="grid-text">
-                                        <h3>No Age/School Restrictions</h3>
+                                        <h3>No Restrictions</h3>
                                         <p>Compete even as a high school or college student, or as a professional or hobbyist!</p>
                                     </div>
                                 </div>
