--- a/index.html
+++ b/index.html
@@ -22,19 +22,22 @@
   <body>
 
     <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid justify-content-start">
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="fa fa-bars"></span> Menu
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbar-nav-wrap" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="fa fa-bars"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav m-auto">
-            <li class="nav-item active"><a class="nav-link">NEXT</a></li>
-            <li class="nav-item"><a class="nav-link">What's NEXT?</a></li>
-            <li class="nav-item"><a class="nav-link">Why NEXT?</a></li>
-            <li class="nav-item"><a class="nav-link">Subscribe</a></li>
+        <a class="navbar-brand pl-lg-0 pl-2" href="#">
+          <img src="images/next_grey.png">
+        </a>
+
+        <div class="collapse navbar-collapse justify-content-end" id="navbar-nav-wrap">
+          <ul class="navbar-nav">
+            <li class="nav-item"><div class="nav-link d-inline-block" data-href="#whats-next">What's NEXT?</div></li>
+            <li class="nav-item"><div class="nav-link d-inline-block" data-href="#why-next">Why NEXT?</div></li>
+            <li class="nav-item"><div class="nav-link d-inline-block" data-href="#subscribe">Subscribe</div></li>
           </ul>
         </div>
 
@@ -73,7 +76,7 @@
     </section>
 
     <!-- What's NEXT? -->
-    <section>
+    <section id="whats-next">
 
       <div class="intro bg-primary py-5">
         <div class="container">
@@ -153,7 +156,7 @@
     </section>
 
     <!-- Why NEXT? -->
-    <section>
+    <section id="why-next">
 
       <div class="intro bg-primary py-5">
         <div class="container">
@@ -189,8 +192,8 @@
 
     </section>
 
-    <!-- Sign up -->
-    <section class="section bg-primary no-pt no-pb">
+    <!-- Subscribe -->
+    <section id="subscribe" class="section bg-primary no-pt no-pb">
       <div class="container">
         <div class="row d-flex justify-content-center">
           <div class="col-lg-8 py-4">
@@ -244,8 +247,8 @@
 
     <!-- Scripts -->
     <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.waypoints.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
     
   </body>
